--- a/index.html
+++ b/index.html
@@ -291,8 +291,8 @@
                     <div class="flex justify-center space-x-6">
                         <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
                         <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="social-icon"><i class="fas fa-envelope"></i></a>
+                        <a href="https://x.com/Aryan25805?t=hKjmU8vzL5As5sDPB9cKoQ&s=09" class="social-icon"><i class="fab fa-twitter"></i></a>
+                        <a href="aryan25805@gmail.com "class="social-icon"><i class="fas fa-envelope"></i></a>
                     </div>
                 </div>
             </div>
@@ -309,4 +309,5 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
