--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                  <div class="mt-12 text-center reveal-up" data-delay="600">
                     <p class="text-lg text-gray-300 mb-4">You can also find me on:</p>
                     <div class="flex justify-center space-x-6">
-                        <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
+                        <a href="https://github.com/aryan25805" class="social-icon"><i class="fab fa-github"></i></a>
                         <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
                         <a href="https://x.com/Aryan25805?t=hKjmU8vzL5As5sDPB9cKoQ&s=09" class="social-icon"><i class="fab fa-twitter"></i></a>
                         <a href="aryan25805@gmail.com "class="social-icon"><i class="fas fa-envelope"></i></a>
@@ -311,3 +311,4 @@
 </body>
 
 </html>
+
