--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div id="particles-js" class="absolute inset-0 z-0 opacity-30"></div>
             <div class="container mx-auto text-center relative z-10 px-4">
                 <div class="relative w-48 h-48 mx-auto mb-8 rounded-full border-4 border-cyan-500 shadow-lg glow-effect animate-pulse-light">
-                    <img src="https://placehold.co/192x192/0f172a/e0e7ff?text=ARYAN" alt="Aryan's Photo" class="w-full h-full object-cover rounded-full">
+                    <img src="ary.jpg" alt="Aryan's Photo" class="w-full h-full object-cover rounded-full">
                 </div>
                 <h1 class="text-6xl md:text-8xl font-extrabold text-gray-50 leading-tight mb-4 reveal-up">
                     Hello, I'm <span class="text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 to-purple-500">ARYAN</span>
@@ -311,4 +311,5 @@
 </body>
 
 </html>
+
 
