--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                         <a href="https://github.com/aryan25805" class="social-icon"><i class="fab fa-github"></i></a>
                         <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
                         <a href="https://x.com/Aryan25805?t=hKjmU8vzL5As5sDPB9cKoQ&s=09" class="social-icon"><i class="fab fa-twitter"></i></a>
-                        <a href="aryan25805@gmail.com "class="social-icon"><i class="fas fa-envelope"></i></a>
+                        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=aryan25805@gmail.com&su=Hello%20Aryan&body=Hi%20Aryan,%0A%0AI%20want%20to%20ask%20you%20about"class="social-icon"><i class="fas fa-envelope"></i></a>
                     </div>
                 </div>
             </div>
@@ -311,6 +311,7 @@
 </body>
 
 </html>
+
 
 
 
